add all order items

--- a/src/components/OrderedDishesAccordion/OrderedDishesAccordion.module.css
+++ b/src/components/OrderedDishesAccordion/OrderedDishesAccordion.module.css
@@ -29,7 +29,7 @@
 
 .dishes_button_icon {
   position: sticky;
-  bottom: 10px;
+  bottom: 15px;
   left: 270px;
   width: 30px;
   height: 30px;
@@ -49,7 +49,7 @@
   left: 0;
   height: 66px;
   background-color: #fff;
-  padding: 4px;
+  padding: 0 4px;
   overflow: hidden;
   width: 315px;
 }
@@ -90,11 +90,11 @@
 
 .orderOption_card {
   display: flex;
-  padding: 0 4px;
+  align-items: center;
+  border-bottom: 1px solid #e4e4e4;
 }
 .orderOption_card:not(:last-child) {
   padding: 0 4px;
-  border-bottom: 1px solid #e4e4e4;
 }
 
 .orderOption_card:not(:first-child) {
@@ -102,12 +102,12 @@
 }
 .orderOption_detail_img {
   border-radius: 12px;
-  width: 58px;
-  height: 58px;
+  width: 54px;
+  height: 54px;
   object-fit: contain;
   margin-right: 12px;
 }
-.orderOption_detail_food_name {
+.orderOption_detail_dish_name {
   text-align: left;
   font-weight: 500;
   font-size: 14px;
@@ -115,7 +115,14 @@
   margin-bottom: 6px;
 }
 
-.orderOption_detail_food_price {
+.orderOption_detail {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 8px 0;
+}
+
+.orderOption_detail_title {
   font-weight: 400;
   font-size: 12px;
   line-height: 130%;
@@ -123,27 +130,16 @@
   color: #9c9c9c;
 }
 
-.orderOption_detail_food_price_cost {
+.orderOption_detail_food_price {
   font-weight: 600;
   font-size: 12px;
   line-height: 150%;
   color: #ff5c00;
 }
 
-.orderOption_detail_change {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 6px 0;
-}
-
-.orderOption_detail_sup_change {
+.orderOption_detail_items {
   display: flex;
   justify-content: space-between;
   text-align: center;
   width: 180px;
-}
-.orderOption_detail_quantity {
-  width: 12px;
-  text-align: center;
 }
