--- a/src/pages/History/History.module.css
+++ b/src/pages/History/History.module.css
@@ -1,6 +1,6 @@
 .historyContainer {
-  padding: 24px 12px 0;
   display: flex;
-  border-left: 1px solid #e4e4e4;
-  border-right: 1px solid #e4e4e4;
+  padding: 24px 12px 26px;
+  border: 1px solid #e4e4e4;
+  border-top: none;
 }
