fix order count, add count up counters

--- a/src/components/HistoryRightSideBar/HistoryRightSideBar.module.css
+++ b/src/components/HistoryRightSideBar/HistoryRightSideBar.module.css
@@ -17,6 +17,11 @@
   border: 1px solid #e4e4e4;
   padding: 6px 4px;
 }
+
+.orders_inner {
+  display: flex;
+}
+
 .orders_item:not(:last-child) {
   margin-bottom: 12px;
 }
@@ -29,4 +34,5 @@
   text-align: center;
   font-weight: 600;
   color: #ff5c00;
+  margin-right: 4px;
 }
