--- a/src/components/HistoryCardRender/HistoryCardRender.module.css
+++ b/src/components/HistoryCardRender/HistoryCardRender.module.css
@@ -1,17 +1,13 @@
 .order_card_wrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 80%;
   overflow-y: scroll;
   scroll-behavior: smooth;
   border: 1px solid #e4e4e4;
-  padding: 12px 3px 12px 12px;
-  height: 80vh;
-}
-
-/* ===== Scrollbar CSS ===== */
-/* Firefox */
-.order_card_wrapper {
+  padding: 18px 3px 12px 18px;
+  height: 83vh;
   scrollbar-width: auto;
   scrollbar-color: #c2c2c2 #ffffff;
 }
@@ -32,6 +28,7 @@
 }
 
 .order_card {
+  position: relative;
   height: 86px;
   display: flex;
   align-items: center;
@@ -40,6 +37,7 @@
   border-radius: 8px;
   border: 1px solid #e4e4e4;
   transition: border 250ms linear;
+  background-color: #fff;
 }
 
 .order_card:hover {
