--- a/src/pages/History/History.module.css
+++ b/src/pages/History/History.module.css
@@ -1,5 +1,6 @@
 .historyContainer {
   display: flex;
+  justify-content: space-between;
   padding: 24px 12px 26px;
   border: 1px solid #e4e4e4;
   border-top: none;
