--- a/src/components/ItemCard/ItemCard.module.css
+++ b/src/components/ItemCard/ItemCard.module.css
@@ -1,6 +1,7 @@
 .card {
   display: flex;
   flex-direction: column; 
+    position: relative;
   height: 100%;
   /* height: 330px; */
   width: 219px;
@@ -37,6 +38,32 @@
   border: 1px solid black;
   border-style: hidden;
 }
+
+.favoriteIconWraper {
+  position: absolute;
+    top: 182px;
+    left: 176px;
+    margin: 0;
+}
+
+.favoriteIcon {
+  margin: 0;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  background-color: #ece6e6;
+  /* background-color: #d30de6; */
+      border-radius: 50%;
+          border: none;
+}
+
+.icon {
+  size: 40px;
+  width: 40px;
+  /* height: 40px; */
+    vertical-align: middle;
+}
+
 
 .moreInfo {
   position: absolute;
@@ -89,18 +116,19 @@
   margin-left: auto;
   margin-right: auto;
   padding: 1px 50px 1px 50px;
-  background-color: rgb(240, 232, 232);
+  background-color: #ffbd8d;;
   font-family: 'Poppins';
   font-weight: 500;
   font-size: 13px;
   line-height: 150%;
   border-radius: 6px;
-  border: 1px solid grey
+  border: 1px solid #ffbd8d;
 }
 
 .button:hover {
   cursor: pointer;
-  background-color: rgb(184, 176, 176);
+  color: white;
+  background-color: #ff5c00;
 }
 
 
@@ -230,19 +258,23 @@
 }
 
 .buttonModal {
-  width: 200px;
+  width: 250px; /*was 200*/
   margin-top: 4px;
+  padding: 5px 0 5px 0;
   text-align: center;
   font-family: 'Poppins';
-  font-weight: 500;
+  font-weight: 600;
   font-size: 18px;
   line-height: 150%;
+  background-color: #ffbd8d;
   border-radius: 7px;
-  border: 1px solid #ff5c00; 
+  border: 1px solid #ffbd8d; 
 }
 
 .buttonModal:hover {
   cursor: pointer;
+  color: white;
+    background-color: #ff5c00;
 }
 
   
