--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,16 @@ textarea {
   background-color: transparent;
   outline: none;
 }
+
+:root {
+  --background: white;
+  --text-primary: black;
+  --text-secondary: royalblue;
+  --accent: purple;
+}
+[data-theme='dark'] {
+  --background: black;
+  --text-primary: white;
+  --text-secondary: grey;
+  --accent: darkred;
+}
