--- a/src/components/OrderedDishesAccordion/OrderedDishesAccordion.module.css
+++ b/src/components/OrderedDishesAccordion/OrderedDishesAccordion.module.css
@@ -7,22 +7,22 @@
   margin: 0;
   width: 316px;
   height: 66px;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 150%;
-  background: #fff;
-  border-radius: 4px;
+  font-weight: var(--font-weight-l);
+  font-size: var(--font-size-m);
+  line-height: var(--line-height-l);
+  background: var(--secondary-background-color);
+
+  border-radius: var(--border-radius-main);
   cursor: pointer;
-  border: 1px solid #e4e4e4;
+  border: var(--border-main);
   transition: box-shadow 250ms linear;
 }
 .dishes_button:hover {
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  box-shadow: var(--box-shadow-main);
 }
 .dishes_button_item_show {
   overflow: visible;
-  border-radius: 0 4px;
+  border-radius: var(--border-radius-main);
   border-bottom: none;
   box-shadow: none;
 }
@@ -33,13 +33,13 @@
   left: 270px;
   width: 30px;
   height: 30px;
-  color: #01d12b;
+  color: var(--third-option-color);
 
   transition: color 250ms linear, rotate 250ms linear;
 }
 
 .dishes_button_icon_show {
-  color: #ff5c00;
+  color: var(--second-option-color);
   rotate: 180deg;
 }
 
@@ -48,7 +48,7 @@
   top: 0;
   left: 0;
   height: 66px;
-  background-color: #fff;
+  background: var(--secondary-background-color);
   padding: 0 4px;
   overflow: hidden;
   width: 315px;
@@ -62,37 +62,30 @@
   transition: height 250ms linear;
   overflow-y: scroll;
   scroll-behavior: smooth;
+  border-radius: var(--border-radius-main);
 
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-}
-
-/* ===== Scrollbar CSS ===== */
-/* Firefox */
-.dishes_content_show {
+  /* ===== Scrollbar CSS ===== */
+  /* Firefox */
   scrollbar-width: auto;
-  scrollbar-color: #c2c2c2 #ffffff;
+  scrollbar-color: var(--scroll-color) var(--third-text-color);
+
+  box-shadow: var(--box-shadow-main);
 }
 
 /* Chrome, Edge, and Safari */
 .dishes_content_show::-webkit-scrollbar {
-  width: 9px;
-}
-
-.dishes_content::-webkit-scrollbar-track {
-  background: #ffffff;
+  width: 8px;
 }
 
 .dishes_content_show::-webkit-scrollbar-thumb {
-  background-color: #c2c2c2;
-  border-radius: 4px;
-  border: 3px solid #ffffff;
+  background-color: var(--scroll-color);
+  border-radius: var(--border-radius-main);
 }
 
 .orderOption_card {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #e4e4e4;
+  border-bottom: var(--border-main);
 }
 .orderOption_card:not(:last-child) {
   padding: 0 4px;
@@ -102,7 +95,7 @@
   margin-top: 4px;
 }
 .orderOption_detail_img {
-  border-radius: 12px;
+  border-radius: var(--border-radius-main);
   width: 54px;
   height: 54px;
   object-fit: contain;
@@ -110,10 +103,11 @@
 }
 .orderOption_detail_dish_name {
   text-align: left;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 60%;
+  font-weight: var(--font-weight-m);
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-s);
   margin-bottom: 6px;
+  color: var(--main-text-color);
 }
 
 .orderOption_detail {
@@ -124,18 +118,18 @@
 }
 
 .orderOption_detail_title {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 130%;
+  font-weight: var(--font-weight-s);
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-m);
   margin-bottom: 2px;
-  color: #9c9c9c;
+  color: var(--secondary-text-color);
 }
 
 .orderOption_detail_food_price {
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 150%;
-  color: #ff5c00;
+  font-weight: var(--font-weight-l);
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-l);
+  color: var(--accent-color);
 }
 
 .orderOption_detail_items {
