--- a/src/components/AuthForm/AuthForm.module.css
+++ b/src/components/AuthForm/AuthForm.module.css
@@ -11,50 +11,46 @@
   margin: 24px 0;
 }
 .signIn_logoText {
-  font-weight: 600;
-  font-size: 28px;
-  line-height: 150%;
-  color: #404047;
+  font-weight: var(--font-weight-l);
+  font-size: var(--font-size-l);
+  line-height: var(--line-height-l);
+  color: var(--main-text-color);
   margin-left: 12px;
 }
 
 .signIn_title {
-  font-weight: 600;
-  font-size: 28px;
-  line-height: 150%;
-  color: #19191c;
+  font-weight: var(--font-weight-l);
+  font-size: var(--font-size-l);
+  line-height: var(--line-height-l);
+  color: var(--main-text-color);
   margin-bottom: 24px;
 }
 .signIn_subTitle {
-  font-size: 12px;
-  line-height: 150%;
-  color: #828487;
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-l);
+  color: var(--secondary-text-color);
   text-align: center;
   margin-bottom: 24px;
 }
 .signIn_subTitle span {
-  font-size: 14px;
-  line-height: 150%;
-  color: #0a0a0a;
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-l);
+  color: var(--main-text-color);
   margin-left: 4px;
 }
 .signIn_field {
   width: 316px;
   height: 40px;
   padding: 12px 16px;
-  background-color: #ffffff;
-  color: #c2c2c2;
-  border: 1px solid #e4e4e4;
-  border-radius: 58px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
+  background-color: var(--field-background-color);
+  color: var(--main-text-color);
+  border: var(--border-main);
+  border-radius: var(--border-radius-secondary);
+  font-size: var(--font-size-m);
+  line-height: var(--line-height-l);
   margin-bottom: 12px;
 }
 
-.signIn_name_error {
-  background-color: #d44c4c;
-}
 .signIn_form {
   display: flex;
   flex-direction: column;
@@ -66,19 +62,17 @@
   width: 316px !important;
   height: 42px !important;
   border: 0 !important;
-  background-color: #ffffff;
 
-  border: 1px solid #e4e4e4 !important;
-  border-radius: 58px;
+  border: var(--border-main) !important;
+  border-radius: var(--border-radius-secondary);
   margin-bottom: 16px;
 }
 
 .signIn_phone_input {
   width: 314px !important ;
   height: 40px !important;
-  /* padding: 12px -6px 12px 62px !important; */
-
-  color: #c2c2c2 !important;
+  background: var(--field-background-color) !important;
+  color: var(--main-text-color) !important;
   border: 0 !important;
   border-radius: 58px !important;
   font-weight: 400 !important;
@@ -94,7 +88,7 @@
   border: 0 !important;
 }
 .signIn_phone_flag > div {
-  border-radius: 58px !important;
+  border-radius: var(--border-radius-secondary) !important;
   top: 2px;
   height: 36px !important;
   width: 42px !important;
@@ -102,8 +96,8 @@
 }
 
 .signIn_phone_flag > div:hover {
-  background-color: #fff5ee !important;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  background-color: var(--secondary-text-color) !important;
+  box-shadow: var(--secondary-background-color);
 }
 
 .signIn_btn {
@@ -113,24 +107,23 @@
   overflow: visible;
   width: 316px;
   height: 42px;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 150%;
-  background: #ff5c00;
-  border-radius: 58px;
+  font-weight: var(--font-weight-l);
+  font-size: var(--font-size-m);
+  line-height: var(--line-height-l);
+  background: var(--accent-color);
+  border-radius: var(--border-radius-secondary);
   cursor: pointer;
-
-  color: #fff;
+  color: var(--third-text-color);
   margin-bottom: 16px;
   transition: background 150ms linear, box-shadow 250ms linear;
 }
 
 .signIn_btn:disabled {
-  background: #f0b38d;
+  background: var(--button-color-disabled);
 }
 
 .signIn_btn:hover {
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: var(--box-shadow-secondary);
 }
 
 .user_profile {
@@ -143,18 +136,19 @@
 .logOut_avatar {
   width: 120px;
   height: 120px;
-  border-radius: 50%;
+  border-radius: var(--border-radius-third);
   margin-bottom: 8px;
 }
 .logOut_text {
-  font-size: 14px;
-  line-height: 150%;
+  font-size: var(--font-size-m);
+  line-height: var(--line-height-l);
   margin-bottom: 12px;
+  color: var(--main-text-color);
 }
 
 .logOut_text_name {
-  font-weight: 600;
-  font-size: 18px;
+  font-weight: var(--font-weight-l);
+  font-size: var(--font-size-m);
   text-transform: capitalize;
 }
 .logOut_text:last-child {
@@ -168,15 +162,13 @@
   width: auto;
   overflow: visible;
 
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 150%;
+  font-weight: var(--font-weight-l);
+  font-size: var(--font-size-m);
+  line-height: var(--line-height-l);
   background-color: transparent;
-  border-radius: 58px;
+  border-radius: var(--border-radius-secondary);
   cursor: pointer;
-  transition: all 0.35s;
-  color: #574ff5;
-  margin-bottom: 24px;
+  color: var(--fourth-text-color);
 
   margin-bottom: 16px;
   transition: box-shadow 250ms linear;
@@ -184,9 +176,9 @@
 
 .signIn_form_error {
   text-align: left;
-  font-size: 14px;
-  line-height: 150%;
-  color: #ff5c00;
+  font-size: var(--font-size-s);
+
+  color: var(--accent-color);
   margin-bottom: 8px;
 }
 .user_form {
@@ -201,9 +193,9 @@
   align-items: center;
   width: 38px;
   height: 38px;
-  background-color: #ff5c00;
-  border-radius: 50%;
-  border: 2px solid #fff;
+  background-color: var(--accent-color);
+  border-radius: var(--border-radius-third);
+  border: var(--border-secondary);
   cursor: pointer;
   transition: background-color 250ms linear;
 }
@@ -211,12 +203,12 @@
 .upload_button svg {
   height: 20px;
   width: 20px;
-  color: #fff;
+  color: var(--third-text-color);
   cursor: pointer;
 }
 
 .upload_button:hover {
-  background-color: cornflowerblue;
+  background-color: var(--fourth-text-color);
 }
 
 .uploadField {
