--- a/src/components/DashboardTypeBar/DashboardTypeBar.module.css
+++ b/src/components/DashboardTypeBar/DashboardTypeBar.module.css
@@ -2,14 +2,14 @@
   padding: 8px 16px;
   margin: 0;
 
-  font-family: 'Poppins';
   font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 150%;
+  font-weight: var(--font-weight-m);
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-l);
 
-  border: 1px solid #e4e4e4;
+  border: var(--border-main);
   border-top: none;
   border-bottom: none;
   text-transform: capitalize;
+  color: var(--main-text-color);
 }
