--- a/src/components/DishCardRender/DishCardRender.module.css
+++ b/src/components/DishCardRender/DishCardRender.module.css
@@ -2,8 +2,10 @@
   display: flex;
   flex-wrap: wrap;
   gap: 14px;
-  padding: 14px;
-  background-color: #e4e4e4;
+  padding: 12px;
+  background-color: var(--third-background-color);
+  border: var(--border-main);
+  border-top: none;
 
   height: calc(100vh - 200px);
   overflow-y: scroll;
