--- a/src/components/DishCardSkeleton/DishCardSkeleton.module.css
+++ b/src/components/DishCardSkeleton/DishCardSkeleton.module.css
@@ -5,22 +5,27 @@
   width: 219px;
 
   padding: 12px 8px 16px 8px;
-  background-color: #ffffff;
-  border-radius: 16px;
+  background-color: var(--secondary-background-color);
+  border-radius: var(--border-radius-main);
 }
 
 .card {
   .image,
   .text {
-    background: #eee;
-    background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
-    border-radius: 5px;
+    /* background: #eee; */
+    background: linear-gradient(
+      110deg,
+      var(--image-load-main-color) 8%,
+      var(--image-load-second-color) 18%,
+      var(--image-load-main-color) 33%
+    );
+    border-radius: var(--border-radius-main);
     background-size: 200% 100%;
     animation: 1.5s shine linear infinite;
   }
 
   .image {
-    border-radius: 16px;
+    border-radius: var(--border-radius-main);
     height: 203px;
     margin-bottom: 12px;
   }
