--- a/src/index.css
+++ b/src/index.css
@@ -48,14 +48,96 @@ textarea {
 }
 
 :root {
-  --background: white;
-  --text-primary: black;
-  --text-secondary: royalblue;
-  --accent: purple;
+  --border-radius-main: 12px;
+  --border-radius-secondary: 20px;
+  --border-radius-third: 50%;
+
+  --border-secondary: 2px solid #fff;
+  --border-third: 1px solid #ff5c00;
+  --border-fourth: 1px solid black;
+
+  --font-weight-s: 400;
+
+  --font-weight-m: 500;
+  --font-weight-l: 600;
+  --font-weight-xl: 700;
+
+  --line-height-s: 60%;
+  --line-height-m: 130%;
+  --line-height-l: 150%;
+
+  --font-size-s: 12px;
+  --font-size-m: 16px;
+  --font-size-ml: 20px;
+
+  --font-size-xm: 24px;
+
+  --font-size-l: 28px;
+
+  --secondary-text-color: #828487;
+  --accent-color: #ff5c00;
+  --primary-button-color: #ffbd8d;
+
+  --third-text-color: #ffffff;
+
+  --fourth-text-color: cornflowerblue;
+
+  --first-option-color: #3071ff;
+  --second-option-color: #ff5c00;
+  --third-option-color: #35c335;
+
+  --box-shadow-secondary: rgba(0, 0, 0, 0.16) 0px 3px 6px,
+    rgba(0, 0, 0, 0.23) 0px 3px 6px;
+
+  --box-shadow-third: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+
+  --box-shadow-fourth: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+
+  --button-color-disabled: #e4e4e4;
+
+  --scroll-color: #c2c2c2;
 }
+
+[data-theme='light'] {
+  background-color: #ffffff;
+
+  --border-main: 1px solid #e4e4e4;
+
+  --main-text-color: #19191c;
+  --second-text-color: #ffffff;
+
+  --box-shadow-main: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  --secondary-background-color: #ffffff;
+  --third-background-color: #e4e4e4;
+  --fourth-background-color: #e4e4e4;
+
+  --image-load-main-color: #ececec;
+  --image-load-second-color: #f5f5f5;
+
+  --field-background-color: #ffffff;
+
+  transition: all 250ms linear;
+}
+
 [data-theme='dark'] {
-  --background: black;
-  --text-primary: white;
-  --text-secondary: grey;
-  --accent: darkred;
+  background-color: #2a2a2a;
+
+  --border-main: 1px solid #737373;
+
+  --main-text-color: #d9d9d9;
+
+  --box-shadow-main: rgba(212, 212, 212, 0.35) 0px 5px 15px;
+  --secondary-background-color: #525252;
+  --third-background-color: #343434;
+  --fourth-background-color: #434343;
+
+  --image-load-main-color: #bbbbbb;
+  --image-load-second-color: #aeaeae;
+
+  --field-background-color: #9b9b9b;
+
+  transition: all 250ms linear;
 }
