--- a/src/pages/History/History.module.css
+++ b/src/pages/History/History.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding: 24px 12px 26px;
-  border: 1px solid #e4e4e4;
+  border: var(--border-main);
   border-top: none;
 }
 
@@ -11,16 +11,16 @@
   flex-direction: column;
   width: 80%;
 
-  border: 1px solid #e4e4e4;
+  border: var(--border-main);
   padding: 18px 3px 12px 18px;
   height: 83vh;
 }
 .order_loading_line {
-  background-color: #ff5e0082 !important;
+  background-color: var(--second-load-color) !important;
 }
 
 .order_loading_line span {
-  background-color: #ff5c00 !important;
+  background-color: var(--accent-color) !important;
 }
 
 .order_no_content {
@@ -28,7 +28,7 @@
   flex-direction: column;
   width: 100%;
 
-  border: 1px solid #e4e4e4;
+  border: var(--border-main);
   padding: 18px 3px 12px 18px;
   height: 83vh;
 }
