--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -9,11 +9,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: #ffffff;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-  border-radius: 12px;
+  background: var(--secondary-background-color);
+  border-radius: var(--border-radius-main);
   transition: opacity 250ms linear, transform 250ms linear;
   opacity: 1;
 }
@@ -26,8 +23,8 @@
 .orderContainer {
   padding-top: 12px;
   display: flex;
-  border-left: 1px solid #e4e4e4;
-  border-right: 1px solid #e4e4e4;
+  border-left: var(--border-main);
+  border-right: var(--border-main);
 }
 
 .orderDetails {
@@ -42,8 +39,8 @@
 }
 
 .orderDetailTitle {
-  font-weight: 600;
-  color: #19191c;
+  font-weight: var(--font-weight-l);
+  color: var(--main-text-color);
 }
 
 .orderOption {
@@ -52,62 +49,55 @@
   font-size: 32px;
   width: 167px;
   height: 45px;
-  border-radius: 8px;
+  border-radius: var(--border-radius-main);
 
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  box-shadow: var(--box-shadow-main);
 
   padding: 0 8px;
   margin-right: 4px;
 }
 .orderOption_dineIn {
-  border: 2px solid #3071ff;
-  color: #3071ff;
+  border: 2px solid var(--first-option-color);
+  color: var(--first-option-color);
 }
 
 .orderOption_delivery {
-  border: 2px solid #ff5c00;
-  color: #ff5c00;
+  border: 2px solid var(--second-option-color);
+  color: var(--second-option-color);
 }
 
 .orderOption_pickup {
-  border: 2px solid #35c335;
-  color: #35c335;
+  border: 2px solid var(--third-option-color);
+  color: var(--third-option-color);
 }
 
 .orderOption_detail {
   padding: 12px 12px 0px 24px;
-  border: 1px solid #e4e4e4;
+  border: var(--border-main);
   height: calc(100vh - 340px);
   overflow-y: scroll;
   scroll-behavior: smooth;
+  scrollbar-width: auto;
+  scrollbar-color: var(--scroll-color) var(--third-text-color);
+
   margin-bottom: 12px;
 }
 
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
-.orderOption_detail {
-  scrollbar-width: auto;
-  scrollbar-color: #c2c2c2 #ffffff;
-}
 
 /* Chrome, Edge, and Safari */
 .orderOption_detail::-webkit-scrollbar {
-  width: 9px;
-}
-
-.orderOption_detail::-webkit-scrollbar-track {
-  background: #ffffff;
+  width: 8px;
 }
 
 .orderOption_detail::-webkit-scrollbar-thumb {
-  background-color: #c2c2c2;
-  border-radius: 4px;
-  border: 3px solid #ffffff;
+  background-color: var(--scroll-color);
+  border-radius: var(--border-radius-main);
 }
 
 .orderOption_detail_img {
-  border-radius: 12px;
+  border-radius: var(--border-radius-main);
   width: 92px;
   height: 92px;
   object-fit: contain;
@@ -115,13 +105,14 @@
 }
 .orderOption_card {
   display: flex;
-  border-bottom: 1px solid #e4e4e4;
-  transition: all 0.35s;
+  border: var(--border-main);
   padding: 6px 4px 6px 4px;
-  border-radius: 16px;
+  border-radius: var(--border-radius-main);
+
+  transition: box-shadow 250ms linear;
 }
 .orderOption_card:hover {
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: var(--box-shadow-main);
 }
 
 .orderOption_card:not(:first-child) {
