--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,8 @@ textarea {
   --border-secondary: 2px solid #fff;
   --border-third: 1px solid #ff5c00;
   --border-fourth: 1px solid black;
+  --border-fifth: 2px solid #e4e4e4;
+  --border-six: 2px solid #ff5c00;
 
   --font-weight-s: 400;
 
@@ -69,9 +71,7 @@ textarea {
   --font-size-s: 12px;
   --font-size-m: 16px;
   --font-size-ml: 20px;
-
   --font-size-xm: 24px;
-
   --font-size-l: 28px;
 
   --secondary-text-color: #828487;
