--- a/src/components/DishCardRender/DishCardRender.module.css
+++ b/src/components/DishCardRender/DishCardRender.module.css
@@ -6,6 +6,7 @@
   background-color: var(--third-background-color);
   border: var(--border-main);
   border-top: none;
+  cursor: grab;
 
   height: calc(100vh - 200px);
   overflow-y: scroll;
