--- a/src/components/HistoryCardRender/HistoryCardRender.module.css
+++ b/src/components/HistoryCardRender/HistoryCardRender.module.css
@@ -2,10 +2,12 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 80%;
-  border: var(--border-main);
+
+  border-top: var(--border-main);
+  border-right: var(--border-main);
   padding: 18px 16px 12px 18px;
-  height: 83vh;
+  height: 100%;
+  cursor: grab;
   overflow-y: scroll;
   scroll-behavior: smooth;
   scrollbar-width: auto;
