--- a/src/components/PageTypeBar/PageTypeBar.module.css
+++ b/src/components/PageTypeBar/PageTypeBar.module.css
@@ -13,3 +13,17 @@
   text-transform: capitalize;
   color: var(--main-text-color);
 }
+
+.historyText {
+  display: flex;
+  padding: 8px 16px;
+  margin: 0;
+  font-style: normal;
+  font-weight: var(--font-weight-m);
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-l);
+
+  border-right: var(--border-main);
+  text-transform: capitalize;
+  color: var(--main-text-color);
+}
