--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ textarea {
   --border-secondary: 2px solid #fff;
   --border-third: 1px solid #ff5c00;
   --border-fourth: 1px solid black;
-  --border-fifth: 2px solid #e4e4e4;
+  --border-fifth: 2px solid #929292;
   --border-six: 2px solid #ff5c00;
 
   --font-weight-s: 400;
